--- a/vars/digitalocean.yml
+++ b/vars/digitalocean.yml
@@ -4,5 +4,5 @@ do_host_name: cindicator-exam-host
 do_key_name: cindicator_temporary_key
 
 do_image_id: ubuntu-16-04-x64
-do_region: ams3
+do_region: fra1
 do_size_id: 1gb
