Make it possible to use strip-docker-image utility

--- a/files/app/Dockerfile
+++ b/files/app/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:8-alpine
 
+RUN apk update && apk add bash
 WORKDIR /app
 COPY ./main.js /app/main.js
-CMD ["node", "main.js"]
+CMD ["node", "/app/main.js"]
